# pluto-model-a

./: .bazelrc  .gitignore  BUILD_AND_RUN.md  MODULE.bazel  README.md  goto_external.sh  prepare_bbai64_sysroot.sh  requirements_frozen.txt  run_pluto_network_demo.sh  setup_py.sh
docs/: Electrical.md  Netlist_BeagleboneAi64.txt  beaglebone-ai-64.txt
etc/pluto-network-demo/: BUILD.bazel  pnode-config.src.txt
images/: BUILD.bazel
images/bb-ai64/: BUILD.bazel
labs/ai64-demo/: BUILD.bazel  README.md  deploy.sh  hello.cpp
labs/bbb-drive-demo/: BUILD.bazel  README.md  init-bbb-drive-demo.sh  init-pwm.sh  install-app.sh  install-init-script.sh  main.cpp  motor_control.cpp  motor_control.h
labs/bbb-gpio-demo/: BUILD.bazel  bbb_pin_map.cpp  bbb_pin_map.h  install-app.sh  main.cpp
labs/bbb-hello-world/: BUILD.bazel  README.md
labs/bbb-pwm-demo/: BUILD.bazel  install-app.sh  main.cpp
labs/orin-gpio-demo/: BUILD.bazel  README.md  deploy.sh  gpio_demo.cpp  gpio_simple.cpp
labs/pluto-network-demo/: BUILD.bazel  PConfig.h  build.sh  pnode-cli.cpp  pnode-server.cpp
labs/pluto-network-demo/pnode-client/: BUILD.bazel  app.py  pnode-client.py
labs/pluto-network-demo/python/: BUILD.bazel  pnode-client.py
lib/PComp/: BUILD.bazel  PComp.cpp  PComp.h  PSocket.cpp  PSocket.h
lib/PHal/: BUILD.bazel  PHal.cpp  PHal.h
lib/PHal/config/: init-bbb-hardware.sh
lib/PMessage/: BUILD.bazel  PMessage.cpp  PMessage.h  build.sh
lib/PMessage/nanopb-0.4.9.1-linux-x86/: BUILD.bazel
lib/PMessage/nanopb-0.4.9.1-linux-x86/generator-bin/: BUILD.bazel
lib/PMessage/platform1/: BUILD.bazel  platform1.pb.c  platform1.pb.h  platform1.proto
lib/PObject/: BUILD.bazel  PObject.cpp  PObject.h
lib/PPid/: BUILD.bazel  PPid.cpp  PPid.h
lib/PUtils/: BUILD.bazel  PUtils.cpp  PUtils.h
lib/PUtils/python/: BUILD.bazel  PUtils.py
toolchains/: BUILD.bazel  README.md
toolchains/arm-linux-gnueabihf/bbb/: BUILD.bazel  arm-none-linux-gnueabihf-ar.sh  arm-none-linux-gnueabihf-cpp.sh  arm-none-linux-gnueabihf-gcc.sh  arm-none-linux-gnueabihf-gcov.sh  arm-none-linux-gnueabihf-ld.sh  arm-none-linux-gnueabihf-nm.sh  arm-none-linux-gnueabihf-objdump.sh  arm-none-linux-gnueabihf-strip.sh  cc_toolchain_config.bzl  toolchain.BUILD
toolchains/arm64-linux-gnu/: README.md
toolchains/arm64-linux-gnu/bbai64/: BUILD.bazel  cc_toolchain_config.bzl  toolchain.BUILD
toolchains/arm64-linux-gnu/orin-nano/: BUILD.bazel  cc_toolchain_config.bzl  toolchain.BUILD
tools/: BUILD.bazel  deploy_to_beaglebone.sh
