bazel_dep(name = "rules_cc", version = "0.1.1")  # Common C++ rules
bazel_dep(name = "rules_python", version = "1.1.0")  # Python support
bazel_dep(name = "rules_foreign_cc", version = "0.14.0")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_oci", version = "2.2.5")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.12",
)
use_repo(python, "python_3_12")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pluto_pip_deps",
    python_version = "3.12",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pluto_pip_deps")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "ubuntu-22-04",
    image = "ubuntu:22.04",
    platforms = ["linux/amd64"],
)
use_repo(oci, "ubuntu-22-04")

bazel_dep(name = "enet", version = "1.3.18")
archive_override(
    module_name = "enet",
    integrity = "sha256-KooMU2DWi7T80R8uTEfGmXbo0shbEJ3X1gsRgaT4XTY=",
    patch_strip = 0,
    patches = [
        "//third_party/enet:add_module_build.patch",
    ],
    strip_prefix = "enet-1.3.18",
    urls = ["http://enet.bespin.org/download/enet-1.3.18.tar.gz"],
)

bazel_dep(name = "rapidjson", version = "1.1.0")
archive_override(
    module_name = "rapidjson",
    integrity = "sha256-v3ztKXBKHmlvvM8qK06gaOd3T6N/bX3UA50Hh/i+2Y4=",
    patch_strip = 0,
    patches = [
        "//third_party/rapidjson:add_module_build.patch",
    ],
    strip_prefix = "rapidjson-1.1.0",
    urls = ["https://github.com/Tencent/rapidjson/archive/refs/tags/v1.1.0.tar.gz"],
)

#bazel_dep(name = "testrepo", version = "1.0")
#git_override(
#    module_name = "testrepo",
#    branch = "main",
#    patch_strip = 0,
#    patches = [
#        "//third_party/testrepo:add_module_build.patch",
#    ],
#    remote = "https://github.com/choudhariashish/testrepo.git",
#)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# NVIDIA Orin Nano ARM64 cross-compiler toolchain
# Using ARM GNU Toolchain 11.3 for glibc 2.35 compatibility with Ubuntu 22.04 LTS
http_archive(
    name = "orin_nano_arm_gnu_toolchain",
    urls = ["https://developer.arm.com/-/media/Files/downloads/gnu/11.3.rel1/binrel/arm-gnu-toolchain-11.3.rel1-x86_64-aarch64-none-linux-gnu.tar.xz"],
    strip_prefix = "arm-gnu-toolchain-11.3.rel1-x86_64-aarch64-none-linux-gnu",
    build_file = "//toolchains/arm64-linux-gnu/orin-nano:toolchain.BUILD",
)

# BeagleBone Black ARMv7 cross-compiler toolchain
# Using ARM GNU Toolchain 13.3 for ARMv7 hard-float (compatible with glibc 2.13+)
http_archive(
    name = "bbb_arm_gnu_toolchain",
    urls = ["https://developer.arm.com/-/media/Files/downloads/gnu/13.3.rel1/binrel/arm-gnu-toolchain-13.3.rel1-x86_64-arm-none-linux-gnueabihf.tar.xz"],
    strip_prefix = "arm-gnu-toolchain-13.3.rel1-x86_64-arm-none-linux-gnueabihf",
    build_file = "//toolchains/arm-linux-gnueabihf/bbb:toolchain.BUILD",
)
