cc_binary(
    name = "bbb-drive-demo",
    srcs = [
        "main.cpp",
        "motor_control.cpp",
        "motor_control.h",
    ],
    copts = [
        "-std=c++11",
        "-Wall",
        "-O2",
    ],
    linkopts = [
        "-lpthread",
    ],
    visibility = ["//visibility:public"],
)
