filegroup(
    name = "pnode-demo",
    srcs = [
        ":pnode-server",
        ":pnode-cli",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "pnode-server",
    srcs = [
        "pnode-server.cpp",
    ],
    deps = [
        "//lib/PObject:PObject",
        "//lib/PUtils:PUtils",
    ],
    data = [
        "//etc/pluto-network-demo:pnode-config",
    ],
)

cc_binary(
    name = "pnode-cli",
    srcs = [
        "pnode-cli.cpp",
    ],
    defines = ["PLATFORM_1"],    # Adds -DPLATFORM_1 to the C++ compiler flags
    deps = [
        "//lib/PObject:PObject",
        "//lib/PUtils:PUtils",
        "//lib/PMessage:PMessage",
    ],
    data = [
        "//etc/pluto-network-demo:pnode-config",
    ],
)
