cc_library(
    name = "PComp",
    srcs = [
        "PComp.cpp",
        "PSocket.cpp",
    ],
    hdrs = [
        "PComp.h",
        "PSocket.h",
    ],
    includes = ["."],
    deps = [
        "//lib/PObject:PObject",
        "//lib/PHal:PHal",
        "//lib/PPid:PPid",
    ],
    visibility = ["//visibility:public"],
)