cc_library(
    name = "PHal",
    srcs = [
        "PHal.cpp",
    ],
    hdrs = [
        "PHal.h",
    ],
    includes = ["."],
    deps = [
        "//lib/PObject:PObject",
    ],
    copts = select({
        "//platforms/bbb:bbb_platform": ["-DPLATFORM=BBB"],
        "//conditions:default": [],
    }),
    linkopts = select({
        "//toolchains:aarch64": ["-lgpiod"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
)