# BeagleBone AI-64 ARM64 Cross-Compilation Toolchain
# This toolchain targets the BeagleBone AI-64 platform running Debian Bookworm

package(default_visibility = ["//visibility:public"])

load(":cc_toolchain_config.bzl", "bbai64_cc_toolchain_config")

# Toolchain configuration for BeagleBone AI-64
bbai64_cc_toolchain_config(name = "bbai64_toolchain_config")

cc_toolchain(
    name = "bbai64_cc_toolchain",
    all_files = "@bbai64_arm_gnu_toolchain//:all_files",
    compiler_files = "@bbai64_arm_gnu_toolchain//:compiler_files",
    linker_files = "@bbai64_arm_gnu_toolchain//:linker_files",
    ar_files = "@bbai64_arm_gnu_toolchain//:ar_files",
    objcopy_files = "@bbai64_arm_gnu_toolchain//:all_files",
    strip_files = "@bbai64_arm_gnu_toolchain//:all_files",
    dwp_files = "@bbai64_arm_gnu_toolchain//:all_files",
    toolchain_config = ":bbai64_toolchain_config",
    toolchain_identifier = "bbai64-arm64-toolchain",
)

toolchain(
    name = "bbai64_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
    toolchain = ":bbai64_cc_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)
